2006-01-22  Harish Krishnaswamy  <kharish@novell.com>

	* icsimporter.c (get_menu_type), (dialog_response_cb),
	 (dialog_close_cb), (get_icalcomponent_from_file):
	Fix twenty odd compiler warnings and style oddness.

2006-01-17  Harish Krishnaswamy  <kharish@novell.com>

	* import-ics-attachments : Initial commits. Plugin written and submitted by
	Johnny Jacob <johnnyjacob@gmail.com>
